tree-sitter-vb6/grammar.js
    source_file: $ => repeat($._module_element),

    _module_element: $ => choice(
      $.module_header,
      $.module_reference,
      $.module_config,
      $.form_block,
      $.option_statement,
      $.attribute_statement,
      $.variable_declaration,
      $.constant_declaration,
      $.type_declaration,
      $.enum_declaration,
      $.declare_statement,
      $.event_statement,
      $.deftype_statement,
      $.sub_declaration,
      $.function_declaration,
      $.property_declaration,
      $.preproc_const,
      $.preproc_if,
      $.implements_statement,
      $._statement,  // Allow module-level statements
      $.module_level_implicit_call,
      $.comment,
      $._newline,
    ),

    // ============================================ 
    // MODULE STRUCTURE
    // ============================================ 
    variable_declaration: $ => prec(10, seq(
      choice(
        // With visibility modifier (no Dim needed)
        seq($._visibility, optional(ci('static')), optional(ci('withevents'))),
        // With Dim keyword
        seq(optional(ci('static')), ci('dim')),
        // With WithEvents
        seq(optional(ci('static')), ci('withevents')),
        // Bug #2: bare Static keyword — "Static x As Long" inside a procedure
        ci('static'),
      ),
      $.variable_list,
      $._terminator,
    )),

    variable_list: $ => seq(
      $.variable_declarator,
      repeat(seq(',', $.variable_declarator)),
    ),

    variable_declarator: $ => seq(
      field('name', $.identifier),
      optional(alias(token.immediate(choice('%', '&', '!', '#', '@', '$')), $.type_hint)),
      optional($.array_bounds),
      optional($.as_clause),
    ),

    as_clause: $ => seq(
      ci('as'),
      optional(ci('new')),
      field('type', $._type),
      optional($.field_length),
    ),

    _type: $ => choice(
      $.builtin_type,
      $.dotted_name,
      seq($.builtin_type, '(', ')'),  // Array type, e.g. As String()
      seq($.dotted_name, '(', ')'),   // Array type, e.g. As Foo.Bar()
    ),

    builtin_type: $ => choice(
      ci('boolean'), ci('byte'), ci('currency'), ci('date'),
      ci('double'), ci('integer'), ci('long'), ci('longlong'),
      ci('longptr'), ci('object'), ci('single'), ci('string'),
      ci('variant'), ci('any'), ci('collection'),
    ),

    enum_declaration: $ => prec(10, seq(
      optional($._visibility),
      ci('enum'),
      field('name', $.identifier),
      $._terminator,
      // A blank line or comment may sit between the Enum header and the first
      // member (and anywhere between members); accept those terminators inside
      // the body so they don't break the first member.
      repeat(choice($.enum_member, $.comment, $._newline)),
      ci('end'),
      ci('enum'),
      $._terminator,
    )),

    enum_member: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression))),
      $._terminator,
    ),

    sub_declaration: $ => seq(
      optional($._visibility),
      optional(ci('static')),
      ci('sub'),
      field('name', $.identifier),
      optional($.parameter_list),
      $._terminator,
      optional($.block),
      ci('end'),
      ci('sub'),
      $._terminator,
    ),

    function_declaration: $ => seq(
      optional($._visibility),
      optional(ci('static')),
      ci('function'),
      field('name', $.identifier),
      optional($.type_hint),
      optional($.parameter_list),
      optional($.as_clause),
      $._terminator,
      optional($.block),
      ci('end'),
      ci('function'),
      $._terminator,
    ),

    parameter_list: $ => seq(
      '(',
      optional(seq(
        $.parameter,
        repeat(seq(',', $.parameter)),
      )),
      ')',
    ),

    parameter: $ => seq(
      optional(ci('optional')),
      optional(choice(ci('byval'), ci('byref'), ci('paramarray'))),
      field('name', $.identifier),
      optional(alias(token.immediate(choice('%', '&', '!', '#', '@', '$')), $.type_hint)),
      optional(seq('(', ')')),  // Array param
      optional($.as_clause),
      optional(seq('=', field('default', $._expression))),
    ),

    // ============================================ 
    // STATEMENTS
    // ============================================ 
    block: $ => repeat1($._statement),

    _statement: $ => choice(
      $.variable_declaration,
      $.constant_declaration,
      $.assignment_statement,
      $.set_statement,
      $.if_statement,
      $.for_statement,
      $.for_each_statement,
      $.do_statement,
      $.while_statement,
      $.with_statement,
      $.select_statement,
      $.exit_statement,
      $.return_statement,
      $.goto_statement,
      $.gosub_statement,
      $.on_error_statement,
      $.on_goto_statement,
      $.on_gosub_statement,
      $.call_statement,
      $.redim_statement,
      $.erase_statement,
      $.raiseevent_statement,
      $.graphics_method_statement,
      // File I/O
      $.open_statement,
      $.close_statement,
      $.input_statement,
      $.line_input_statement,
      $.print_statement,
      $.write_statement,
      $.get_statement,
      $.put_statement,
      $.seek_statement,
      $.lock_statement,
      $.unlock_statement,
      $.width_statement,
      // System statements
      $.app_activate_statement,
      $.beep_statement,
      $.chdir_statement,
      $.chdrive_statement,
      $.mkdir_statement,
      $.rmdir_statement,
      $.kill_statement,
      $.name_statement,
      $.filecopy_statement,
      $.load_statement,
      $.unload_statement,
      $.date_statement,
      $.randomize_statement,
      $.lset_statement,
      $.rset_statement,
      $.mid_statement,
      $.error_statement,
      $.resume_statement,
      $.stop_statement,
      $.end_statement,
      $.sendkeys_statement,
      $.savepicture_statement,
      $.savesetting_statement,
      $.deletesetting_statement,
      $.setattr_statement,
      $.reset_statement,
      // Preprocessor in statements
      $.preproc_if_statement,
      $.label,
      $.comment,
      $._newline,
    ),

    // Conditional compilation within statements
    assignment_statement: $ => prec.dynamic(PREC.ASSIGNMENT, seq(
      optional(ci('let')),
      field('target', $._lvalue),
      choice('=', '+='), // Removed '-=' as it's not a standard VB6 assignment operator
      field('value', $._expression),
      $._terminator,
    )),

    call_statement: $ => prec.dynamic(-1, seq(
      optional(ci('call')),
      choice($.call_expression, $.implicit_call_stmt),
      $._terminator,
    )),

    implicit_call_stmt: $ => seq(
      choice($.member_expression, $.with_member_expression, $.with_dictionary_access, alias($.callable_identifier, $.identifier), $.identifier),
      optional($.argument_list_no_parens),
    ),

    argument_list_no_parens: $ => choice(
      seq(
        // The first bare argument excludes a leading-dot member so "Foo .X" is
        // not ambiguous with the member access "Foo.X". Every later argument may
        // be a With-block member (".X"), e.g. "Foo a, .X, .Y, b".
        $._argument_no_with_member,
        repeat(seq(',', optional($._argument))),
      ),
      // Leading omitted argument: "obj.Add , x, y" leaves the first slot empty.
      repeat1(seq(',', optional($._argument))),
    ),

    // Explicit call statement (requires Call keyword) - safe at module level
    select_statement: $ => seq(
      ci('select'),
      ci('case'),
      field('test', $._expression),
      $._terminator,
      // VB6 permits declarations/statements (and the more common blank line or
      // comment) to sit between the selector and the first Case; they belong to
      // the enclosing scope. Consume any such statements before the first case
      // clause so a leading "Dim" no longer breaks the Select.
      repeat($._statement),
      // Zero case clauses is legal: every Case may be commented out, leaving only
      // the Select Case … End Select shell with comment/blank lines in the body.
      repeat(choice($.case_clause, $.case_else_clause)),
      ci('end'),
      ci('select'),
      $._terminator,
    ),

    case_clause: $ => seq(
      ci('case'),
      $.case_values,
      $._terminator,
      optional($.block),
    ),

    case_values: $ => seq(
      $._case_value,
      repeat(seq(',', $._case_value)),
    ),

    _case_value: $ => choice(
      seq($._expression, ci('to'), $._expression),
      seq(ci('is'), $._compare_op, $._expression),
      $._expression,
    ),

    width_statement: $ => seq(
      ci('width'),
      $._expression,
      ',',
      $._expression,
      $._terminator,
    ),

    // SYSTEM STATEMENTS
    name_statement: $ => seq(
      ci('name'),
      $._expression,
      ci('as'),
      $._expression,
      $._terminator,
    ),

    _expression: $ => choice(
      $.literal,
      $.typed_identifier,
      $.identifier,
      $.parenthesized_expression,
      $.unary_expression,
      $.binary_expression,
      $.new_expression,
      $.typeof_expression,
      $.addressof_expression,
      $.member_expression,
      $.with_member_expression,
      $.with_dictionary_access,
      $.index_expression,
      $.dictionary_access,
      $.call_expression,
      ci('time'),
    ),

    literal: $ => choice(
      $.integer_literal,
      $.float_literal,
      $.string_literal,
      $.boolean_literal,
      $.nothing_literal,
      $.date_literal,
      $.color_literal,
      $.file_number,
    ),

    // Bug #1r2 / Round3-D1: decimal literals may carry a VB6 type-declaration
    // suffix. %=Integer &=Long !=Single #=Double @=Currency (e.g. 0&, 100#,
    // 3.14!). ANTLR's INTEGERLITERAL allows & ! # @; VB6 also allows %, so the
    // union is % & ! # @. The suffix must be part of the token so the lexer
    // doesn't mis-read & as the binary concatenation operator.
    integer_literal: $ => choice(
      /\d+[%&!#@]?/,
      /&[hH][0-9a-fA-F]+/,
      /&[oO][0-7]+/,
    ),

    // Round3-D2: float literals may also carry a type-declaration suffix
    // (1.5#, 3.14!, 2.0@, 1e3&) — matches ANTLR DOUBLELITERAL.
    string_literal: $ => /"([^\"]|"")*"/,

    member_expression: $ => prec.left(PREC.CALL, seq(
      field('object', $._expression),
      '.',
      field('member', $.identifier),
      optional(alias(token.immediate(choice('%', '&', '#', '@', '$')), $.type_hint)),
    )),

    call_expression: $ => prec(PREC.CALL, seq(
      field('function', choice($.identifier, $.member_expression, $.with_member_expression, $.dictionary_access, $.with_dictionary_access)),
      optional(alias(token.immediate(choice('%', '&', '#', '@', '$')), $.type_hint)),
      $.argument_list,
    )),

    argument_list: $ => seq('(', optional($.argument_list_inner), ')'),

    argument_list_inner: $ => choice(
      // At least one argument present
      seq($._argument, repeat(seq(',', optional($._argument)))),
      // Leading comma (omitted first argument), then more slots
      repeat1(seq(',', optional($._argument))),
    ),

    // Bug #2r2: VB6 allows ByVal/ByRef at the call site to force passing mode.
    _argument: $ => choice(
      seq($.identifier, ':=', $._expression),  // Named
      seq(optional(choice(ci('byval'), ci('byref'))), $._expression),  // Positional
    ),

    _argument_no_with_member: $ => choice(
      seq($.identifier, ':=', $._expression),  // Named
      seq(optional(choice(ci('byval'), ci('byref'))), $._expression_no_with_member),  // Positional
    ),

    _lvalue: $ => choice(
      $.member_expression,
      $.with_member_expression,
      $.with_dictionary_access,
      $.dictionary_access,
      $.index_expression,
      // Bug #C: "a(0)" / "obj.Item(0)" is lexically a call_expression, which always wins
      // over index_expression. Accept it as an lvalue so "Set a(0) = x" and "a(0) = x" parse.
      $.call_expression,
      $.typed_identifier,
      $.identifier,
      ci('time'),
      // Some statement keywords double as ordinary member/variable names
      // (a Function named "Name", a control's "Width"). When such a word is the
      // left side of an assignment it is the assignment target, not the start of
      // the keyword statement; accept it as an lvalue.
      alias(ci('name'), $.identifier),
      alias(ci('width'), $.identifier),
    ),

    // ============================================
    // IDENTIFIERS
    // ============================================ 
    // Round3-D3/D4: identifiers may be bracket-escaped ([End], [Stop]) so a
    // reserved word can be used as a name (ANTLR ambiguousIdentifier), and may
    // contain accented Latin letters (ANTLR LETTER includes ÄÖÜÁÉ…Ç).
    identifier: $ => token(prec(-1, choice(
      /[a-zA-Z_À-ɏ][a-zA-Z0-9_À-ɏ]*/,
      /\[[^\]\r\n]+\]/,
    ))),

    _visibility: $ => choice(
      ci('public'),
      ci('private'),
      ci('friend'),
      ci('global'),
    ),



    // ============================================ 
    // COMMENTS AND TERMINATORS
    // ============================================ 
    comment: $ => token(choice(
      seq("'", /[^\r\n]*/),
      seq(/[rR][eE][mM]/, /[ \t]/, /[^\r\n]*/),
    )),

    _terminator: $ => choice(seq(optional($.comment), $._newline), ':'),
    _newline: $ => /\r?\n/,
  },
});
